fix vertical alignment of text

--- a/src/wiki-table-editor.css
+++ b/src/wiki-table-editor.css
@@ -12,13 +12,12 @@
 }
 
 .wiki-table-editor .cell-content {
-  display: inline-block;
+  display: block;
   width: 100%;
   max-height: 50px;
   box-sizing: border-box;
   overflow: hidden;
   text-overflow: ellipsis;
-  vertical-align: middle;
 }
 
 .wiki-table-editor input {
